--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ main {
 }
 h1 {
     font-size: 70px;
-    font-family: Meiriyo;
+    font-family: sans-serif;
     background-color: #666666;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -21,20 +21,20 @@ h1 {
 }
 h2 {
     font-size: 30px;
-    font-family: Meiriyo;
+    font-family: sans-serif;
     margin-top: 30px;
     margin-bottom: 0px;
 }
 div {
     font-size: 20px;
-    font-family: Meiriyo;
+    font-family: sans-serif;
 }
 #fun {
-    font-family: "FunScript", Meiriyo;
+    font-family: "FunScript", sans-serif;
     font-size: 28px;
 }
 #eikyu {
-    font-family: "LetiaNum", Meiriyo;
+    font-family: "LetiaNum", sans-serif;
     font-size: 28px;
 }
 @font-face {
