--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,7 @@ th, td, #fun {
     -ms-writing-mode: tb-rl;
     -webkit-writing-mode: vertical-rl;
     text-orientation: upright;
+    -webkit-text-orientation: upright;
 }
 
 @font-face {   
