--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ h1, h2, #digital, p {
     text-align: center;
 }
 body {
-    background-image: url(../assets/marble.jpg)
+    background-image: url(../assets/image.png)
 }
 main {
     margin-left: auto;
