--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ h1, h2, #digital, p {
 body {
     background-image: url(../assets/image.png)
 }
+strong {
+color: #00ff00;
+}
+
 main {
     margin-left: auto;
     margin-right: auto;
