--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 h1, h2, #digital, p {
     text-align: center;
 }
+strong {
+color: #ffffff;
+}
+
 body {
     background-image: url(../assets/image.png)
 }
